--- a/roderqr.html
+++ b/roderqr.html
@@ -308,7 +308,7 @@
         // QR 掃描器變數
         let html5QrcodeScanner = null;
         let isScanning = false;
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz6cv9CIkeIK6isfxkfRqTyajQ78WatSDsAyRAG-hngDKb4FXApGqPh0LjzETpcKqeF/exec';
+        const SCRIPT_URL = https://script.google.com/macros/s/AKfycbyKHLUOiMhakREIgBLAb6YcGDUXVwUKFusyCBu9P7wpsscs8p6rCoNF7vPBbgoG97TW/exec';
 
         // 初始化 QR 掃描器
         function initQRScanner() {
