--- a/roderqr.html
+++ b/roderqr.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -308,7 +307,7 @@
         // QR 掃描器變數
         let html5QrcodeScanner = null;
         let isScanning = false;
-        const SCRIPT_URL = https://script.google.com/macros/s/AKfycbzD8-bxOUJrI63U6wG_BWlDGElgVwJGZl9MrvB2LAe1ZUgATInfbx2oBN_cgaWcKAiI/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyKHLUOiMhakREIgBLAb6YcGDUXVwUKFusyCBu9P7wpsscs8p6rCoNF7vPBbgoG97TW/exec';
 
         // 初始化 QR 掃描器
         function initQRScanner() {
