--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
@@ -71,9 +70,9 @@
         const APP_CONFIG = {
             SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbw7HUEHnAE7KmvEZW4EIP9JfA9jAjyWjsCIJnxYvwRfaNRL5R_5WbI7wNkQ32G1c7eKMA/exec',
             LIFF_ID: '2008276630-bYNjwMx7',
-            // NOTE: This QR code URL has an expiration date in its signature (x-expires).
-            // It may need to be updated in the future.
-            QR_CODE_URL: "https://p11-flow-imagex-download-sign.byteimg.com/tos-cn-i-aanyxblx48/4e03bdf943d1443ea3ec5fa72978155a.png~tplv-aanyxblx48-24:720:720.png?rcl=20251011120817294D51A8FB4817821CDD&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1760760497&x-signature=sMiaEFbK7IUchDhVNcD3LSxPHU0%3D",
+            // IMPORTANT: Replace this placeholder with a permanent URL to your actual LINE QR code image.
+            // The previous URL was temporary and has expired, causing a 403 error.
+            QR_CODE_URL: "https://qr-official.line.me/gs/M_561zotgq_GW.png", // Using a reliable, generic placeholder
             LINE_ADD_FRIEND_URL: 'https://line.me/R/ti/p/@561zotgq',
         };
 
