--- a/index.html
+++ b/index.html
@@ -1,115 +1,100 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINE 用戶綁定</title>
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' https://static.line-scdn.net;
-        connect-src 'self' https://script.google.com https://script.googleapis.com https://api.line.me;
-    ">
-    <style>
-        body { margin: 0; padding: 20px; text-align: center; font-family: sans-serif; }
-        .status { margin-top: 20px; }
-        .success { color: green; }
-        .error { color: red; }
-        .loading { color: blue; }
-    </style>
+    <title>LINE LIFF - Add Friend to Google Sheet</title>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #00B900;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #009900;
+        }
+        #status {
+            margin-top: 20px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <div id="status" class="status"></div>
+    <div class="container">
+        <h2>Welcome to 無名牛排</h2>
+        <p>Click below to add your LINE profile to our system.</p>
+        <button onclick="addToSheet()">Add My Profile</button>
+        <p id="status"></p>
+    </div>
+
     <script>
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwllylbSx2TxUfF08dkEZsjx3SSdoMgJlWCRclhHWwLVqBo2B3ZRDy3xUd1SNfh8xAsKg/exec';
-        const LIFF_ID = '2008276630-bYNjwMx7';
-        const MAX_RETRIES = 3;
-
-        function setStatus(message, type) {
-            const status = document.getElementById('status');
-            status.textContent = message;
-            status.className = 'status ' + type;
-        }
-
-        async function initializeLiffAndBindUser() {
-            let retryCount = 0;
-            while (retryCount < MAX_RETRIES) {
-                try {
-                    console.log('Initializing LIFF with ID:', LIFF_ID);
-                    if (!window.liff) throw new Error('LIFF SDK not loaded');
-                    await window.liff.init({ liffId: LIFF_ID });
-                    console.log('LIFF initialized successfully');
-
-                    if (!window.liff.isLoggedIn()) {
-                        console.log('User not logged in, redirecting to LINE login');
-                        window.liff.login();
-                        return;
-                    }
-
-                    setStatus('正在連結...', 'loading');
-                    console.log('Fetching LINE user profile');
-                    await new Promise(resolve => setTimeout(resolve, 1000));
-                    const profile = await window.liff.getProfile();
-                    console.log('LINE profile received:', JSON.stringify(profile));
-
-                    if (!profile || !profile.userId || typeof profile.userId !== 'string') {
-                        throw new Error('Invalid LINE user profile or missing userId');
-                    }
-
-                    const payload = {
-                        source: 'line_web_app',
-                        customerName: profile.displayName || '',
-                        customerLineId: profile.userId,
-                        pictureUrl: profile.pictureUrl || ''
-                    };
-                    console.log('Sending POST request with payload:', JSON.stringify(payload));
-
-                    const response = await fetch(SCRIPT_URL, {
-                        method: 'POST',
-                        mode: 'cors',
-                        cache: 'no-cache',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload),
-                        redirect: 'follow'
-                    });
-                    console.log('POST response status:', response.status);
-
-                    const responseText = await response.text();
-                    console.log('POST response text:', responseText);
-                    if (!response.ok) {
-                        console.error('POST request failed:', responseText);
-                        throw new Error(`Server responded with status: ${response.status} - ${responseText}`);
-                    }
-
-                    let result;
-                    try {
-                        result = JSON.parse(responseText);
-                    } catch (parseError) {
-                        console.error('Failed to parse response:', parseError.message);
-                        throw new Error('Invalid response format from server');
-                    }
-                    console.log('POST response data:', JSON.stringify(result));
-
-                    if (result.status !== 'success') {
-                        throw new Error(result.message || 'Backend processing failed');
-                    }
-
-                    setStatus('帳號連結成功！', 'success');
-                    return;
-                } catch (error) {
-                    retryCount++;
-                    console.warn(`Attempt ${retryCount} failed: ${error.message}`);
-                    if (retryCount >= MAX_RETRIES) {
-                        console.error('LIFF initialization or binding failed after max retries:', error.message);
-                        setStatus('帳號連結失敗：' + (error.message || '請稍後再試'), 'error');
-                        return;
-                    }
-                    await new Promise(resolve => setTimeout(resolve, 2000 * retryCount));
+        async function initializeLiff() {
+            try {
+                await liff.init({ liffId: '2008276630-bYNjwMx7' });
+                if (!liff.isLoggedIn()) {
+                    liff.login();
                 }
+            } catch (error) {
+                document.getElementById('status').innerText = 'LIFF Initialization failed: ' + error.message;
             }
         }
 
-        initializeLiffAndBindUser();
+        async function addToSheet() {
+            const statusElement = document.getElementById('status');
+            statusElement.innerText = 'Processing...';
+
+            try {
+                const profile = await liff.getProfile();
+                const userData = {
+                    userId: profile.userId,
+                    displayName: profile.displayName,
+                    pictureUrl: profile.pictureUrl || '',
+                    timestamp: new Date().toISOString()
+                };
+
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxfrYlDMYiERpd1FRGNvp8QACLfm1jbm0yKVUq3RKD-YQfPcWLvEXDH6eBtPIRbOiKPig/exec', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(userData),
+                    mode: 'cors'
+                });
+
+                const result = await response.json();
+                if (result.status === 'success') {
+                    statusElement.innerText = 'Profile added successfully!';
+                } else {
+                    statusElement.innerText = 'Error: ' + result.message;
+                }
+            } catch (error) {
+                statusElement.innerText = 'Error: ' + error.message;
+            }
+        }
+
+        // Initialize LIFF on page load
+        window.onload = initializeLiff;
     </script>
 </body>
 </html>
