--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 20px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 10vh; /* Reduced for better mobile fit if content is short */
+            min-height: 10vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,7 +24,7 @@
             text-align: center;
             max-width: 400px;
             width: 100%;
-            margin: 20px; /* Add some margin for smaller screens */
+            margin: 20px;
         }
         .logo {
             width: 120px;
@@ -51,7 +51,7 @@
             width: 100%;
             margin-bottom: 20px;
             transition: all 0.3s;
-            box-sizing: border-box; /* Include padding in width */
+            box-sizing: border-box;
         }
         .add-btn:hover { background: #00a300; transform: translateY(-2px); }
         .status {
@@ -59,7 +59,7 @@
             border-radius: 10px;
             margin-top: 15px;
             font-weight: bold;
-            word-break: break-word; /* Prevent long messages from overflowing */
+            word-break: break-word;
         }
         .success { background: #d4edda; color: #155724; }
         .error { background: #f8d7da; color: #721c24; }
@@ -76,25 +76,14 @@
     </div>
 
     <script>
-        // --- CONFIGURATION ---
-        // 1. Replace 'YOUR_LIFF_ID_HERE' with your actual LIFF Channel ID.
-        const LIFF_ID = '2008276630-bYNjwMx7'; // 填入你的LIFF ID
-
-        // 2. Replace 'YOUR_DEPLOYED_APPS_SCRIPT_URL_HERE' with the "Web app URL" after deploying your Google Apps Script.
-        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbznzREwLTQ3wIYXW5fbuRoA0Ky6nUToUlHXK3gnuRQVbW7LdOG7EGpyPtfjXh08r58qZQ/exec'; // 填入你的Google Apps Script URL
-
-        // 3. Confirm this matches your LINE Official Account's ID (e.g., '@561zotgq').
-        const BOT_LINE_ID = '@561zotgq'; // 填入你的LINE官方帳號ID
-        // --- END CONFIGURATION ---
+        const LIFF_ID = '2008276630-bYNjwMx7';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyPmXtV5y2evMZTrz-KQPxH8uv8CkNVoVB2RjnGZM1HaI7FCisLRHr38H0ltRJPECP3MA/exec';
+        const BOT_LINE_ID = '@561zotgq';
 
         async function initLiff() {
             try {
-                await liff.init({
-                    liffId: LIFF_ID
-                });
+                await liff.init({ liffId: LIFF_ID });
                 console.log('LIFF Initialization successful.');
-                // You can add logic here to check if the user is already a friend if needed
-                // For example: liff.getFriendship().then(data => { if (data.friendFlag) showStatus('您已是好友！', 'success'); });
             } catch (error) {
                 console.error('LIFF Initialization failed:', error);
                 showStatus('LIFF 初始化失敗，請確認設定或稍後再試。', 'error');
@@ -105,80 +94,84 @@
             try {
                 showStatus('正在處理您的請求...', 'loading');
 
-                // Check if LIFF is opened within the LINE app
                 if (!liff.isInClient()) {
                     showStatus('請在LINE應用程式內開啟此頁面，正在導向加好友頁面...', 'loading');
-                    // Redirect to the LINE Official Account page if not in LIFF
                     window.location.href = `https://line.me/R/ti/p/${BOT_LINE_ID}`;
-                    return; // Stop further execution
+                    return;
                 }
 
-                // Check if the user is logged into LINE through LIFF
                 if (!liff.isLoggedIn()) {
                     showStatus('請先登入LINE帳號...', 'loading');
-                    // Redirect to LINE login page, then back to this LIFF app
                     liff.login();
-                    return; // Stop further execution
+                    return;
                 }
 
-                // Get user profile information
                 const profile = await liff.getProfile();
-                
-                // Prepare user data for Google Apps Script
+                console.log('Profile:', profile);
+
                 const userData = {
                     userId: profile.userId,
                     displayName: profile.displayName,
-                    pictureUrl: profile.pictureUrl || '', // Use empty string if no picture
-                    // Attempt to get email from ID Token; 'N/A' if not available or scope not granted
+                    pictureUrl: profile.pictureUrl || '',
                     statusMessage: liff.getDecodedIdToken()?.email || 'N/A (Email scope not granted or available)',
                     timestamp: new Date().toISOString(),
-                    source: `LIFF 掃碼 ${BOT_LINE_ID}`, // Indicate source is LIFF
-                    botId: BOT_LINE_ID.replace('@', '') // Remove '@' for cleaner data in sheet
+                    source: `LIFF 掃碼 ${BOT_LINE_ID}`,
+                    botId: BOT_LINE_ID.replace('@', '')
                 };
+                console.log('UserData sent:', userData);
 
-                // Send data to Google Apps Script
-                // Using 'no-cors' mode means we can't read the response from Apps Script directly
-                // but it helps prevent CORS issues for simple data logging.
-                await fetch(APPS_SCRIPT_URL, {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 10000); // 10秒超時
+
+                const response = await fetch(APPS_SCRIPT_URL, {
                     method: 'POST',
-                    mode: 'no-cors', 
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(userData)
+                    body: JSON.stringify(userData),
+                    signal: controller.signal
                 });
 
-                showStatus(`歡迎 ${profile.displayName}！您的資訊已記錄。正在導向加好友頁面...`, 'success');
+                clearTimeout(timeoutId);
 
-                // Open the LINE official account friend adding page in an external browser/LINE app
-                // This is generally the most reliable way to prompt "add friend" from LIFF.
+                if (!response.ok) {
+                    throw new Error(`HTTP 錯誤！狀態: ${response.status}`);
+                }
+
+                const result = await response.json();
+                if (result.status === 'success') {
+                    showStatus(`歡迎 ${profile.displayName}！您的資訊已記錄。正在導向加好友頁面...`, 'success');
+                } else {
+                    throw new Error(result.message || '伺服器錯誤');
+                }
+
                 liff.openWindow({
                     url: `https://line.me/R/ti/p/${BOT_LINE_ID}`,
-                    external: true // Open in the system browser or LINE app directly
+                    external: true
                 });
 
-                // Optionally, close the LIFF window after a short delay
-                // This gives the user time to see the status message before the window closes.
                 setTimeout(() => {
                     liff.closeWindow();
-                }, 3000); 
+                }, 3000);
 
             } catch (error) {
                 console.error('加好友流程發生錯誤:', error);
                 let errorMessage = '加好友失敗，請重試。';
-                if (error.code === '2') { // LIFF error code 2 often means network issues or invalid LIFF ID
+                if (error.name === 'AbortError') {
+                    errorMessage = '請求超時，請檢查網路連線。';
+                } else if (error.code === '2') {
                     errorMessage = 'LIFF 應用程式發生錯誤，請檢查網路連線或 LIFF ID 設定。';
+                } else if (error.message) {
+                    errorMessage = error.message;
                 }
                 showStatus(errorMessage, 'error');
             }
         }
 
-        // Helper function to display status messages
         function showStatus(message, type) {
             const statusEl = document.getElementById('status');
             statusEl.textContent = message;
-            statusEl.className = `status ${type}`; // Apply CSS class for styling
+            statusEl.className = `status ${type}`;
         }
 
-        // Initialize LIFF when the window loads
         window.onload = initLiff;
     </script>
 </body>
