--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <script>
         const LIFF_ID = '2008276630-bYNjwMx7';
-        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyPmXtV5y2evMZTrz-KQPxH8uv8CkNVoVB2RjnGZM1HaI7FCisLRHr38H0ltRJPECP3MA/exec';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwM--pIZqSfQyngM8-heF6Ngh1Z5AvsN_8wSwvZc0oC6JfwTxE3_Qq3TSCB9JqZrZc_IQ/exec';
         const BOT_LINE_ID = '@561zotgq';
 
         async function initLiff() {
@@ -101,4 +101,70 @@
                 }
 
                 if (!liff.isLoggedIn()) {
-                    showStatus
+                    showStatus('請先登入LINE帳號...', 'loading');
+                    liff.login();
+                    return;
+                }
+
+                const profile = await liff.getProfile();
+                console.log('Profile:', profile);
+
+                const userData = {
+                    userId: profile.userId,
+                    displayName: profile.displayName,
+                    pictureUrl: profile.pictureUrl || '',
+                    statusMessage: liff.getDecodedIdToken()?.email || 'N/A',
+                    timestamp: new Date().toISOString(),
+                    source: `LIFF 掃碼 ${BOT_LINE_ID}`,
+                    botId: BOT_LINE_ID.replace('@', '')
+                };
+                console.log('UserData sent:', userData);
+
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 10000);
+
+                const response = await fetch(APPS_SCRIPT_URL, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(userData),
+                    signal: controller.signal
+                });
+
+                clearTimeout(timeoutId);
+
+                if (!response.ok) {
+                    throw new Error(`HTTP 錯誤！狀態: ${response.status}`);
+                }
+
+                const result = await response.json();
+                if (result.status === 'success') {
+                    showStatus(`歡迎 ${profile.displayName}！您的資訊已記錄。`, 'success');
+                    liff.openWindow({
+                        url: `https://line.me/R/ti/p/${BOT_LINE_ID}`,
+                        external: true
+                    });
+                    setTimeout(() => liff.closeWindow(), 3000);
+                } else {
+                    throw new Error(result.message || '伺服器錯誤');
+                }
+
+            } catch (error) {
+                console.error('加好友流程發生錯誤:', error);
+                let errorMessage = '加好友失敗，請重試。';
+                if (error.name === 'AbortError') errorMessage = '請求超時，請檢查網路連線。';
+                else if (error.code === '2') errorMessage = 'LIFF 應用程式錯誤，請檢查設定。';
+                else if (error.message) errorMessage = error.message;
+                showStatus(errorMessage, 'error');
+            }
+        }
+
+        function showStatus(message, type) {
+            const statusEl = document.getElementById('status');
+            statusEl.textContent = message;
+            statusEl.className = `status ${type}`;
+        }
+
+        window.onload = initLiff;
+    </script>
+</body>
+</html>
