--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 20px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 10vh;
+            min-height: 100vh; /* Changed to 100vh for full page */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -37,9 +37,10 @@
             justify-content: center;
             font-size: 48px;
             color: white;
+            box-shadow: 0 5px 15px rgba(0,185,0,0.3);
         }
-        h1 { color: #333; margin: 0 0 20px; }
-        p { color: #666; margin: 0 0 30px; }
+        h1 { color: #333; margin: 0 0 20px; font-size: 2em; }
+        p { color: #666; margin: 0 0 30px; font-size: 1.1em; line-height: 1.6; }
         .add-btn {
             background: #00b900;
             color: white;
@@ -52,18 +53,23 @@
             margin-bottom: 20px;
             transition: all 0.3s;
             box-sizing: border-box;
+            box-shadow: 0 4px 10px rgba(0,185,0,0.2);
+            font-weight: bold;
         }
-        .add-btn:hover { background: #00a300; transform: translateY(-2px); }
+        .add-btn:hover { background: #00a300; transform: translateY(-3px); box-shadow: 0 6px 12px rgba(0,185,0,0.3); }
+        .add-btn:active { transform: translateY(0); box-shadow: 0 2px 5px rgba(0,185,0,0.2); }
+
         .status {
-            padding: 10px;
+            padding: 12px; /* Slightly more padding */
             border-radius: 10px;
-            margin-top: 15px;
+            margin-top: 20px; /* More margin */
             font-weight: bold;
             word-break: break-word;
+            font-size: 0.95em;
         }
-        .success { background: #d4edda; color: #155724; }
-        .error { background: #f8d7da; color: #721c24; }
-        .loading { background: #fff3cd; color: #856404; }
+        .success { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+        .error { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+        .loading { background: #fff3cd; color: #856404; border: 1px solid #ffeeba; }
     </style>
 </head>
 <body>
@@ -76,17 +82,23 @@
     </div>
 
     <script>
-        const LIFF_ID = '2008276630-bYNjwMx7';
+        const LIFF_ID = '2008276630-bYNjwMx7'; // Make sure this is YOUR LIFF ID
+        // *** IMPORTANT: Replace with the Web App URL from your Apps Script deployment ***
         const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyPmXtV5y2evMZTrz-KQPxH8uv8CkNVoVB2RjnGZM1HaI7FCisLRHr38H0ltRJPECP3MA/exec';
-        const BOT_LINE_ID = '@561zotgq';
+        const BOT_LINE_ID = '@561zotgq'; // Make sure this is your bot's LINE ID
 
         async function initLiff() {
             try {
                 await liff.init({ liffId: LIFF_ID });
                 console.log('LIFF Initialization successful. Context:', liff.getContext());
+                if (liff.isLoggedIn() && liff.isInClient()) {
+                    // Automatically try to get profile if already logged in and in LINE
+                    // This might be useful for scenarios where user just re-opens LIFF
+                    // await getAndSendProfile(); // Can add this if you want to send data on initial load
+                }
             } catch (error) {
                 console.error('LIFF Initialization failed:', error);
-                showStatus('LIFF 初始化失敗，請確認設定或稍後再試。', 'error');
+                showStatus(`LIFF 初始化失敗：${error.message || '未知錯誤'}`, 'error');
             }
         }
 
@@ -96,16 +108,33 @@
 
                 if (!liff.isInClient()) {
                     showStatus('請在LINE應用程式內開啟此頁面，正在導向加好友頁面...', 'loading');
-                    window.location.href = `https://line.me/R/ti/p/${BOT_LINE_ID}`;
+                    // Add a delay before redirecting to allow user to read message
+                    setTimeout(() => {
+                        window.location.href = `https://line.me/R/ti/p/${BOT_LINE_ID}`;
+                    }, 2000);
                     return;
                 }
 
                 if (!liff.isLoggedIn()) {
                     showStatus('請先登入LINE帳號...', 'loading');
                     liff.login();
-                    return;
+                    return; // liff.login() will redirect, so no further execution here
                 }
 
+                await getAndSendProfile();
+
+            } catch (error) {
+                console.error('加好友流程發生錯誤:', error);
+                let errorMessage = '加好友失敗，請重試。';
+                if (error.name === 'AbortError') errorMessage = '請求超時，請檢查網路連線。';
+                else if (error.code === '2') errorMessage = `LIFF 應用程式錯誤: ${error.message || '請檢查設定'}`;
+                else if (error.message) errorMessage = error.message;
+                showStatus(errorMessage, 'error');
+            }
+        }
+
+        async function getAndSendProfile() {
+            try {
                 const profile = await liff.getProfile();
                 console.log('Profile acquired:', profile);
 
@@ -117,7 +146,8 @@
                     userId: profile.userId,
                     displayName: profile.displayName,
                     pictureUrl: profile.pictureUrl || '',
-                    statusMessage: liff.getDecodedIdToken()?.email || 'N/A',
+                    // Use liff.getDecodedIDToken().email if 'email' scope is requested and available
+                    statusMessage: profile.statusMessage || liff.getDecodedIDToken()?.email || 'N/A', // Using profile.statusMessage if available
                     timestamp: new Date().toISOString(),
                     source: `LIFF 掃碼 ${BOT_LINE_ID}`,
                     botId: BOT_LINE_ID.replace('@', '')
@@ -125,7 +155,7 @@
                 console.log('UserData prepared for send:', userData);
 
                 const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 10000);
+                const timeoutId = setTimeout(() => controller.abort(), 15000); // Increased timeout to 15 seconds
 
                 const response = await fetch(APPS_SCRIPT_URL, {
                     method: 'POST',
@@ -136,34 +166,33 @@
 
                 clearTimeout(timeoutId);
                 console.log('Fetch response status:', response.status);
-                console.log('Fetch response headers:', response.headers);
 
                 if (!response.ok) {
-                    throw new Error(`HTTP 錯誤！狀態: ${response.status}`);
+                    const errorText = await response.text();
+                    console.error('Server error response text:', errorText);
+                    throw new Error(`HTTP 錯誤！狀態: ${response.status}. 詳情: ${errorText.substring(0, 200)}...`);
                 }
 
                 const result = await response.json();
                 console.log('Server response:', result);
                 if (result.status === 'success') {
                     showStatus(`歡迎 ${profile.displayName}！您的資訊已記錄。`, 'success');
+                    // Open the LINE friend add page and then close LIFF
                     liff.openWindow({
                         url: `https://line.me/R/ti/p/${BOT_LINE_ID}`,
                         external: true
                     });
-                    setTimeout(() => liff.closeWindow(), 3000);
+                    setTimeout(() => liff.closeWindow(), 3000); // Close LIFF after a short delay
                 } else {
                     throw new Error(result.message || '伺服器錯誤');
                 }
 
             } catch (error) {
-                console.error('加好友流程發生錯誤:', error);
-                let errorMessage = '加好友失敗，請重試。';
-                if (error.name === 'AbortError') errorMessage = '請求超時，請檢查網路連線。';
-                else if (error.code === '2') errorMessage = 'LIFF 應用程式錯誤，請檢查設定。';
-                else if (error.message) errorMessage = error.message;
-                showStatus(errorMessage, 'error');
+                console.error('獲取並發送資料時發生錯誤:', error);
+                throw error; // Re-throw to be caught by the outer addFriend error handler
             }
         }
+
 
         function showStatus(message, type) {
             const statusEl = document.getElementById('status');
