--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 </head>
 <body>
     <h1>歡迎加入無名牛排 LINE 好友</h1>
-    <p>掃描 QR Code 加入好友後，點擊按鈕記錄您的 LINE 資訊到 Google Sheet。</p>
+    <p>掃描 QR Code 加入好友後，點擊按鈕記錄您的 LINE 資訊。</p>
     <button id="submitBtn" onclick="sendToSheet()" disabled>記錄我的資訊</button>
     <div id="status"></div>
-    <div class="info">請在 LINE App 內操作。如果未加入好友，請先確認加入。</div>
+    <div class="info">請在 LINE App 內操作。若未加入好友，請先確認加入。</div>
 
     <script>
         async function initializeLiff() {
             try {
                 await liff.init({ liffId: '2008276630-bYNjwMx7' });
-                // 檢查是否在 LINE Client 內
                 if (!liff.isInClient()) {
                     document.getElementById('status').textContent = '請在 LINE App 內掃描 QR Code 開啟此頁面。';
                     return;
@@ -32,8 +31,10 @@
                 if (!liff.isLoggedIn()) {
                     liff.login({ redirectUri: window.location.href });
                 } else {
+                    // 自動取得用戶資料並提交（無需手動點擊）
                     document.getElementById('submitBtn').disabled = false;
-                    document.getElementById('status').textContent = '初始化成功！您已加入好友，可以記錄資訊。';
+                    document.getElementById('status').textContent = '初始化成功！正在自動記錄您的資料...';
+                    await sendToSheet(); // 自動執行提交
                 }
             } catch (error) {
                 document.getElementById('status').textContent = '初始化失敗: ' + error.message + '。請確保 LIFF 設定正確並在 LINE App 內。';
@@ -41,7 +42,6 @@
         }
 
         async function sendToSheet() {
-            document.getElementById('status').textContent = '正在取得您的資料...';
             try {
                 const profile = await liff.getProfile();
                 const data = {
@@ -51,7 +51,7 @@
                     statusMessage: profile.statusMessage || ''
                 };
 
-                await fetch('https://script.google.com/macros/s/AKfycbwGaufjpFizvjNjZnXRnOx01bNXUP6IG4697SAkeh06_qAfyVULZ1JdfFtlWVOxzo30gw/exec', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbwGaufjpFizvjNjZnXRnOx01bNXUP6IG4697SAkeh06_qAfyVULZ1JdfFtlWVOxzo30gw/exec', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data),
@@ -59,8 +59,7 @@
                 });
 
                 document.getElementById('status').textContent = '您的 LINE User ID 已成功記錄到 Google Sheet！感謝加入。';
-                // 可選: 提交後自動關閉 LIFF 視窗
-                setTimeout(() => liff.closeWindow(), 2000);
+                setTimeout(() => liff.closeWindow(), 2000); // 2秒後關閉
             } catch (error) {
                 document.getElementById('status').textContent = '記錄失敗: ' + error.message + '。請再試一次。';
             }
