--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>無名牛排 - 加入好友並記錄</title>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script> <!-- 生產環境建議本地安裝以避免警告 -->
+    <script src="https://cdn.tailwindcss.com"></script> <!-- 生產環境建議本地安裝 -->
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- 配置Tailwind顏色和字體 -->
@@ -117,7 +117,7 @@
     <script>
         async function initializeLiff() {
             try {
-                await liff.init({ liffId: '2008289130-9XPR8Kpj' }); // 更新為新 LIFF ID
+                await liff.init({ liffId: '2008289130-9XPR8Kpj' });
                 if (!liff.isInClient()) {
                     document.getElementById('status').textContent = '錯誤：請在 LINE App 內掃描 QR Code 開啟此頁面。';
                     return;
@@ -137,6 +137,7 @@
         async function sendToSheet() {
             try {
                 const profile = await liff.getProfile();
+                console.log('Profile:', profile); // 除錯：檢查取得的資料
                 const data = {
                     userId: profile.userId,
                     displayName: profile.displayName,
